RESOLVED FIXED213260
quikr.com: unable to select item from dropdown
https://bugs.webkit.org/show_bug.cgi?id=213260
Summary quikr.com: unable to select item from dropdown
Antoine Quint
Reported 2020-06-16 14:31:59 PDT
quikr.com: unable to select item from dropdown
Attachments
Patch (7.20 KB, patch)
2020-06-16 14:34 PDT, Antoine Quint
no flags
Patch (7.22 KB, patch)
2020-06-16 14:43 PDT, Antoine Quint
zalan: review+
Antoine Quint
Comment 1 2020-06-16 14:34:39 PDT
Antoine Quint
Comment 2 2020-06-16 14:34:44 PDT
Antoine Quint
Comment 3 2020-06-16 14:43:13 PDT
alan
Comment 4 2020-06-17 09:22:02 PDT
Comment on attachment 402040 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=402040&action=review > Source/WebCore/rendering/RenderBox.cpp:4593 > + // the box-shadow should not extend the visual overflow. > + auto borderBox = borderBoxRect(); > + if (!hasBorderImageOutsets && !hasOutline && borderBox.isEmpty()) > + return; Please test it with non-empty margin box.
Antoine Quint
Comment 5 2020-06-17 13:09:36 PDT
Note You need to log in before you can comment on or make changes to this bug.